benchmark-results/main/cseq/concurrentwitness2test.2025-11-17_11-13-00.logfiles/SV-COMP23_unreach-call.cseq-mix002.opt.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix002.opt.yml/mix002.opt.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix002.opt.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_sv0fs3u9/tmp/tmp5mjo68i3.c
Compilation started
/tmp/BenchExec_run_sv0fs3u9/tmp/tmp5mjo68i3.c: In function ‘P1’:
/tmp/BenchExec_run_sv0fs3u9/tmp/tmp5mjo68i3.c:603:19: error: ‘FALSE’ undeclared (first use in this function)
  603 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_sv0fs3u9/tmp/tmp5mjo68i3.c:603:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_sv0fs3u9/tmp/tmp5mjo68i3.c: In function ‘P2’:
/tmp/BenchExec_run_sv0fs3u9/tmp/tmp5mjo68i3.c:643:19: error: ‘FALSE’ undeclared (first use in this function)
  643 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_sv0fs3u9/tmp/tmp5mjo68i3.c:644:19: error: ‘TRUE’ undeclared (first use in this function)
  644 |   weak$$choice2 = TRUE;;
      |                   ^~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
